creusot/tests/should_fail/bug/436_2.stderr
error: encountered a cycle during translation: [Item(DefId(0:7 ~ 436_2[6940]::Bad::None), ['{erased}]), Type(creusot_contracts::Snapshot<&'{erased} mut Bad<'{erased}>>), Type(Bad<'{erased}>), Item(DefId(0:9 ~ 436_2[6940]::Bad::Some), ['{erased}])]
 --> 436_2.rs:5:5
  |
5 |     None,
  |     ^^^^

error: aborting due to 1 previous error

